# FMath

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile-mcss  GeometryCalculator.cpp  Line.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
FMath/: FMath.h  FMath_dir.dox  GeometryCalculator.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Plane.h  Quaternion.h  Ray.h  Vector2.h  Vector3.h  Vector4.h  export.h
cmake/: Config.cmake.in
tests/: CMakeLists.txt  FMathTests.cpp
